<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RequestActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"   
    android:orientation="vertical"
    android:padding="20dp" >
    
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_recipient" />
        <EditText 
            android:id="@+id/edit_request_recipient"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />        
    </LinearLayout>    
    
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_marginTop="20dp" >
		<Button
		    android:id="@+id/button_regular_request"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/send_regular_request" 
		    android:onClick="sendRegularRequest" />
	   <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regular_explanation"
            android:layout_marginTop="5dp" />
    </LinearLayout>    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/button_group_request"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_group_request"
            android:onClick="sendGroupRequest" />
       <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_explanation" 
            android:layout_marginTop="5dp" />
       <TextView
            android:id="@+id/text_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:autoLink="web"
            android:textStyle="bold"
            android:layout_marginTop="5dp" />
    </LinearLayout>    
    
</LinearLayout>